examples/test/testpolicy19308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19308
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key20: value36
      key40: value31
      key48: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value32
          key46: value14
          key4: value47
